# Med7-manip

./: .clang-format  .clang-tidy  CHANGELOG.md  README.md
dentaqt_bringup/: CMakeLists.txt  package.xml
dentaqt_bringup/dentaqt_bringup/: __init__.py  launch_mixin.py
dentaqt_bringup/launch/: .gitkeep  sim.launch.py
dentaqt_controllers/: CMakeLists.txt  package.xml
dentaqt_controllers/config/: dentaqt_controllers.yaml  lbr_gravity_compensation.yaml
dentaqt_controllers/include/dentaqt_controllers/: lbr_chained_torque_forwarder.hpp  lbr_gravity_compensation_controller.hpp  urdf_param_client.hpp  visibility_control.hpp
dentaqt_controllers/launch/: lbr.gravity_compensation.launch.py  test.sim.launch.py
dentaqt_controllers/parameter_generators/: lbr_gravity_compensation_controller.yaml
dentaqt_controllers/plugin_description_files/: dentaqt_controllers.xml
dentaqt_controllers/src/: lbr_chained_torque_forwarder.cpp  lbr_gravity_compensation_controller.cpp
dentaqt_controllers/tests/: CMakeLists.txt  lbr_torque_sine_reference.cpp
dentaqt_description/: CMakeLists.txt  package.xml
dentaqt_description/config/: basic.rviz
dentaqt_description/dentaqt_description/: __init__.py  launch_mixin.py
dentaqt_description/gazebo/: lbr.gazebo.xacro
dentaqt_description/hooks/: dentaqt_description.sh.in
dentaqt_description/launch/: view_robot.launch.py
dentaqt_description/ros2_control/: lbr_system_interface.xacro
dentaqt_description/urdf/med7/: med7.urdf.xacro  med7_description.urdf.xacro
dentaqt_description/xacros/: inertias.xacro
dentaqt_gazebo/: CMakeLists.txt  README.md  package.xml
dentaqt_gazebo/hooks/: dentaqt_gazebo.dsv.in  dentaqt_gazebo.sh.in
dentaqt_gazebo/plugins/: CMakeLists.txt
dentaqt_gazebo/plugins/apply_force_torque/: ApplyForceTorque.qml  CMakeLists.txt
dentaqt_gazebo/plugins/apply_force_torque/include/dentaqt_gazebo/: ApplyForceTorque.hh  WrenchVisualizer.hh
dentaqt_gazebo/plugins/apply_force_torque/src/: ApplyForceTorque.cc  WrenchVisualizer.cc
dentaqt_ign_ros2_control/: CMakeLists.txt  dentaqt_ign_hardware_plugins.xml  package.xml
dentaqt_ign_ros2_control/include/dentaqt_ign_ros2_control/: dentaqt_ign_ros2_control_plugin.hpp  dentaqt_ign_system.hpp  dentaqt_ign_system_interface.hpp
dentaqt_ign_ros2_control/src/: dentaqt_ign_ros2_control_plugin.cpp  dentaqt_ign_system.cpp
