<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dentaqt_controllers</name>
  <version>0.1.0</version>
  <description>ROS 2 based force-torque controllers for the dentaqt project</description>
  <maintainer email="prashanthramadoss@gmail.com">Prashanth Ramadoss</maintainer>
  <license>Apache 2.0</license>
  <author>Prashanth Ramadoss</author>
  <author>Vishal Ramadoss</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>

  <depend>fri_vendor</depend>
  <depend>lbr_fri_msgs</depend>
  <depend>lbr_fri_ros2</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
